--- a/style.css
+++ b/style.css
@@ -8,19 +8,23 @@ body {
  background-size: cover;
  background-repeat: no-repeat;
  font-size: 100%;
-  height:90%;
+  height:95%;
 
  }
  header {
-     height:10%;
+     height:5%;
      width: 100%;
    background-color: white;
  }
 .formulaire1 {
   margin-left: 65%;
   margin-top:5%;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.4);
   width: 30%;
   height: 40%;
-   padding:2px 5px;
+   padding:2px 10px;
+}
+.logo {
+  margin-left: 5%;
+  height:100px;
 }
