--- a/Styles/flexbox.css
+++ b/Styles/flexbox.css
@@ -133,19 +133,22 @@ footer li a {
     text-decoration: none;
 }
 .fondFooter{
+  position: fixed;
   margin-top: -10px;
   padding-top: 10px;
   width:100%;
-  height:55px;
+  height:85px;
   background-color:white;
   margin-bottom: -40px;
+  bottom: 0px;
 }
 footer {
     background-color: white;
-    position: absolute;
+    position: fixed;
     left: 50%;
     transform: translate(-50%);
     margin-bottom: 0px;
+    bottom: 0px;
 }
 
 footer li a:hover {
