--- a/Styles/gestion_capteurs.css
+++ b/Styles/gestion_capteurs.css
@@ -1,4 +1,12 @@
 .affiche_pieces{
   margin-top: 100px;
-  color:red;
+  text-align: center;
+  font-size: 24px;
+  color:blue;
+  margin-bottom: 100px;
+  background-color: #ffffff;
+  opacity: 0.6;
+  padding: 6px;
+  width:40%;
+  margin-left: 30%;
 }
