--- a/Styles/flexbox.css
+++ b/Styles/flexbox.css
@@ -27,9 +27,6 @@ header{
      background-color: white;
 
 }
-ul,li,form,fieldset,html,body{
-   border-size: 0px;
-}
 fieldset
    {
       border: 0px;
@@ -134,21 +131,22 @@ footer li a {
 }
 .fondFooter{
   position: fixed;
-  margin-top: -10px;
-  padding-top: 10px;
-  width:100%;
-  height:85px;
+  margin-top: -65px;
+  width:200%;
+  height:70%;
+  left: -50%;
   background-color:white;
-  margin-bottom: -40px;
-  bottom: 0px;
+  margin-bottom: 0px;
+
 }
 footer {
-    background-color: white;
-    position: fixed;
-    left: 50%;
-    transform: translate(-50%);
-    margin-bottom: 0px;
-    bottom: 0px;
+  position: fixed;
+  bottom: 0;
+  height: 70px;
+  background-color: white;
+  left: 50%;
+  transform: translate(-50%);
+  margin-bottom: 0px;
 }
 
 footer li a:hover {
