--- a/Styles/flexbox.css
+++ b/Styles/flexbox.css
@@ -23,6 +23,8 @@ html, body {
 
 /* HEADER */
 header{
+  position:relative;
+  top:10px;
   margin-top: -18px;
   height:63px;
   padding-top: 10px;
