--- a/Styles/flexbox.css
+++ b/Styles/flexbox.css
@@ -1,22 +1,20 @@
 html, body {
-  min-height:100%;
  margin:0;
  padding:0;
  }
 .accueil {
+  position: relative;
   padding:0;
  font-family: Verdana, sans-serif;
  background-size: cover;
  background-repeat: no-repeat;
  font-size: 100%;
-  height:95%;
   margin-bottom: 10px;
 
 
 
 
 
-    background-image:url(../images/formulaire.jpg);
  }
  .fondForm{
  }
@@ -86,8 +84,7 @@ li a:hover {
     display: flex;
     -webkit-flex-wrap : wrap;
     flex-wrap : wrap;
-    width:100%;
-    height:100%;
+
     background-color: grey ;
     justify-content: space-between;
 
@@ -157,7 +154,7 @@ footer {
 }
 .footer2 {
   position: relative;
-  bottom: 0 ;
+  bottom: -50px ;
   height: 70px;
   visibility: hidden;
 
