--- a/Styles/flexbox.css
+++ b/Styles/flexbox.css
@@ -174,13 +174,43 @@ footer li a:hover {
 
 }
 .apropos{
-  margin: 30 auto;
+  margin: 50 auto;
   font-family: trebuchet, Arial ;
 	color : #818A8E ;
 	font-weight:normal;
 	font-style: italic;
-	text-align: center ;
+
 }
 .nhistoire{
   background-color: #C4D8D5;
+  border: 6px black double;
+  border-spacing: 20px;
+  border-radius: 20%;
+  padding: 2%;
+  width: auto;
+  margin-left: 30%;
+  margin-right: 30%;
 }
+.cadre {
+  display:inline
+  }
+  #map {
+   height: 400px;
+   width: 60%;
+   margin-left: 20%;
+  }
+
+  .equipe{
+    width: 625px;
+    height: 408px;
+    margin-left: 30%;
+    background-color: #C4D8D5;
+  }
+
+  h2 {
+  	font-family: trebuchet, Arial ;
+  	color : #818A8E ;
+  	font-weight:normal;
+  	font-style: italic;
+  	text-align: center ;
+  }
