--- a/Styles/accueiladmin.css
+++ b/Styles/accueiladmin.css
@@ -1,24 +1,24 @@
-.cadre {
+.cadre2 {
     background: #9878A7;
     padding: 20px;
     height: 50%;
     width: 50%;
     margin : auto;
-
     margin-top: 70px;
+    opacity: 1;
 
 }
 
 
-.cadre .Nom {
+.cadre2 .Nom {
     background: #CED1DB;
     margin: 5px;
     padding:8px 8px;
     border-radius: 5px;
-
+    opacity: 1;
 }
 
-h1 {
+.titleadmin {
     font-family: trebuchet,Arial;
     text-align: center;
     color : white;
@@ -28,4 +28,5 @@ h1 {
     margin: 5px;
     padding:8px 8px;
     border-radius: 5px;
+    opacity: 0.9;
 }
