--- a/Styles/style.css
+++ b/Styles/style.css
@@ -8,3 +8,66 @@
   width: 270px;
    padding:2px 10px;
 }
+a.info {
+
+   position: relative;
+
+   color: black;
+
+   text-decoration: none;
+
+   border-bottom: 1px gray dotted; /* On souligne le texte. */
+
+}
+
+a.info span {
+
+   display: none; /* On masque l'infobulle. */
+
+}
+
+a.info:hover {
+
+   background: none; /* Correction d'un bug d'Internet Explorer. */
+
+   z-index: 500; /* On définit une valeur pour l'ordre d'affichage. */
+
+
+   cursor: help; /* On change le curseur par défaut par un curseur d'aide. */
+
+}
+
+a.info:hover span {
+
+   display: inline; /* On affiche l'infobulle. */
+
+   position: absolute;
+
+
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+
+
+   top: 30px; /* On positionne notre infobulle. */
+
+   left: 20px;
+
+
+   background: white;
+
+
+   color: #007B9A;
+
+   padding: 3px;
+
+
+   border: 1px solid #007B9A;
+
+   border-left: 1px solid #007B9A;
+
+}
+.infoq {
+  font-size: 8pt;
+  font-weight: bold;
+  color:#8CDCF0;
+  display: inline;
+}
