--- a/Styles/gestion_capteurs.css
+++ b/Styles/gestion_capteurs.css
@@ -1,15 +1,18 @@
 .affiche_pieces{
-  margin-top: 100px;
+  margin-top: 70px;
+  margin-bottom: auto;
   text-align: center;
   font-size: 24px;
-  margin-bottom: 100px;
-  background-color: #ffffff;
-  padding: 6px;
+  background-color:  rgba(255, 255, 255, 0.5);
+  padding: 10px;
   width:40%;
   margin-left: 30%;
+  border-radius: 20px;
+
 }
 a,a:visited {
-  color:#6C6C6C;
+  color:#1B2E8D;
+  font-family: 'PT Sans', sans-serif;
   text-decoration: none;
 }
 a:hover {
@@ -19,8 +22,36 @@ a:hover {
   background-image:url(../images/formulaire.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-   height:95%;
+
+   height:50%;
    margin:0;
    padding: 0;
 
 }
+fieldset {
+ padding:0 20px 20px 20px;
+ margin-bottom:10px;
+ border:1px solid
+	#8B8D8D;
+ }
+input, textarea, select, option {
+ background-color:
+	white;
+ }
+input, textarea, select {
+ padding:3px;
+ border:1px solid
+	#8B8D8D;
+ border-radius:5px;
+ width:200px;
+ }
+input[type=radio] {
+ background-color:transparent;
+ border:none;
+ width:10px;
+ }
+input[type=submit], input[type=reset] {
+ width:60px;
+ margin-left:5px;
+ cursor:pointer;
+ }
