--- a/Styles/salle.css
+++ b/Styles/salle.css
@@ -1,23 +1,89 @@
-.salle{
+
+.salle {
+     position:fixed;
+     left: 25%;
+     width:20%;
+     top: 100px;
+     bottom: 0;
+
+     font-family: 'Poppins', sans-serif;
+}
+.titre_piece {
+  width:80%;
+  font-size: 24px;
+  color:#383839;
+  font-family: 'Poppins', sans-serif;
   text-align: center;
+}
+.description{
+  margin-top: 20px;
+  font-size: 12;
+  text-align: justify;
+}
+.all_sensors{
+  margin-top: 50px;
+}
+.ligne{
+  margin-top: 20px;
+  position: fixed;
+  left:43%;
+  width: 1px;
+  height:300px;
+  background-color:#E3E3E3;
 }
 .capteurs{
   text-align: center;
   border-width:1px;
  border-style:dashed;
  border-color:#C6C6C6;
- width:30%;
- margin-left: 35%;
- padding: 5px;
+ padding: 8px;
+ width: 30%;
+ margin-top: 10px;
+ margin-left : 45%;
  margin-bottom: 5px;
+ border-radius: 20px;
 }
 .data{
-  margin-top: -5px;
-  font-size: 18pt;
+  margin-top: -10px;
+  font-size: 16;
 }
 .date{
   color:#00A9FD;
+  font-size: 12;
 }
 .formulaire_capteur {
+  font-size: 12;
   text-align: center;
+  width:80%;
 }
+fieldset {
+ padding:0 20px 20px 20px;
+ margin-bottom:10px;
+ border:1px solid
+	#8B8D8D;
+ }
+input, textarea, select, option {
+ background-color:
+	white;
+ }
+input, textarea, select {
+ padding:3px;
+ margin-bottom: 5px;
+ border:1px solid
+	#8B8D8D;
+ border-radius:5px;
+ width:100%;
+ }
+ select {
+ margin-top:10px;
+ }
+input[type=radio] {
+ background-color:transparent;
+ border:none;
+ width:10px;
+ }
+input[type=submit], input[type=reset] {
+ width:60px;
+ margin-left:5px;
+ cursor:pointer;
+ }
