--- a/Styles/salle.css
+++ b/Styles/salle.css
@@ -29,7 +29,7 @@
   left:43%;
   width: 1px;
   height:300px;
-  background-color:#E3E3E3;
+  background-color:#828282;
 }
 .capteurs{
   text-align: center;
