--- a/Styles/accueiladmin.css
+++ b/Styles/accueiladmin.css
@@ -42,3 +42,9 @@
   background-image: url("/github/bluehouse/Images/validate.png");
   width: 20;
 }
+
+.title {
+  margin-left: 0%;
+  font-family: trebuchet,Arial;
+  color: grey;
+}
