--- a/Styles/style.css
+++ b/Styles/style.css
@@ -8,6 +8,17 @@
   width: 270px;
    padding:2px 10px;
 }
+.cercle {
+
+  display:inline-flex;
+  border-radius: 50%;
+  background-color: white;
+  width: 10px;
+  height: 14px;
+  padding-left: 4px;
+  margin-top: -4px;
+}
+
 a.info {
 
    position: relative;
@@ -16,7 +27,7 @@ a.info {
 
    text-decoration: none;
 
-   border-bottom: 1px gray dotted; /* On souligne le texte. */
+
 
 }
 
@@ -68,6 +79,7 @@ a.info:hover span {
 .infoq {
   font-size: 8pt;
   font-weight: bold;
-  color:#8CDCF0;
+  color:#535353;
   display: inline;
+  border-radius: 50%;
 }
