--- a/Styles/VueGenerale.css
+++ b/Styles/VueGenerale.css
@@ -3,16 +3,14 @@
     display: flex;
     flex-wrap : wrap;
     width:100%;
-    height:100%;
     background-color: grey ;
     justify-content:center;
-    
+
 }
 
 .BlockFlex {
-    background-color: #ffffff;
-    opacity: 0.6;
-    filter: alpha(opacity=60); /* For IE8 and earlier */
+   background-color:  rgba(255, 255, 255, 0.5);;
+     /* For IE8 and earlier */
     width: 400px;
     height: -100px;
     margin: 47px;
@@ -126,13 +124,13 @@
         position: absolute; top: 0; bottom: 0;
         right: 44px;
         border: 2px solid #595757; border-radius: 20px;
-        transition: all 0.3s ease-in 0s; 
+        transition: all 0.3s ease-in 0s;
     }
     .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
         margin-left: 0;
     }
     .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
-        right: 0px; 
+        right: 0px;
     }
     .centre{
         width: 60%;
