--- a/Styles/flexbox.css
+++ b/Styles/flexbox.css
@@ -31,9 +31,9 @@ header{
 
 }
 .header{
-  position:relative;
-
-  top:0px;
+  position:fixed;
+width: 100%;
+  top:10px;
   margin-top: -18px;
   height:63px;
   padding-top: 10px;
@@ -215,3 +215,7 @@ footer li a:hover {
   	font-style: italic;
   	text-align: center ;
   }
+.connexion{
+   position: fixed;
+   left:50%;
+}
