--- a/Styles/assistance.css
+++ b/Styles/assistance.css
@@ -1,64 +1,35 @@
 form {
     /* Pour le centrer dans la page */
-    margin: 30 auto;
-    width: 400px;
+
     /* Pour voir les limites du formulaire */
     padding: 1em;
-    border: 1px solid grey;
+    border: 0spx solid grey;
     border-radius: 1em;
     font-family: trebuchet;
 }
 form div + div {
     margin-top: 1em;
 }
-
-label {
-    /* Afin de s'assurer que toutes les étiquettes aient la même dimension et soient alignées correctement */
-    display: inline-block;
-    width: 90px;
-    text-align: right;
-
-}
-input, textarea {
-    /* Afin de s'assurer que tous les champs textuels utilisent la même police
-       Par défaut, textarea utilise une police à espacement constant */
-    font: 1em sans-serif;
-
-    /* Pour donner la même dimension à tous les champs textuels */
-    width: 300px;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-
-    /* Pour harmoniser l'apparence des bordures des champs textuels */
-    border: 1px solid #999;
-}
-input:focus, textarea:focus {
-    /* Afin de rehausser les éléments actifs */
-    border-color: #000;
+.contact {
+     position:fixed;
+     left: 20%;
+     width:18%;
+     top: 100px;
+     bottom: 0;
+     padding-right:  100px;
 }
 
-textarea {
-    /* Pour aligner correctement les champs multilignes et leurs étiquettes */
-    vertical-align: top;
+.faq {
 
-    /* Pour donner assez d'espace pour entrer du texte */
-    height: 5em;
-
-    /* Pour permettre aux utilisateurs de redimensionner un champ textuel horizontalement
-       Cela ne marche pas avec tous les navigateurs  */
-    resize: vertical;
+    background: #E8E8E8;
+    border: 0px solid grey;
+    padding: 20px;
+    width: 40%;
+    margin-left : 40%;
+    border-radius: 10px;
+    text-align: justify;
 }
 
-.button {
-    /* Pour positionner les boutons de la même manière que les champs textuels */
-    padding-left: 90px; /* même dimension que les étiquettes */
-}
-
-button {
-    /* Cette marge représente approximativement le même espace
-       que celui entre les étiquettes et les champs textuels */
-    margin-left: .5em;
-}
 
 h1 {
 	font-family: trebuchet, Arial ;
@@ -78,21 +49,36 @@ h2 {
 h3 {
 
 }
-.faq {
-    margin: 30 auto;
-    width:60%;
-    left: 50%;
-    transform: translate(+30%);
-    /* Pour voir les limites du formulaire */
-    padding: 1em;
-    border: 1px solid grey;
-    border-radius: 1em;
-}
-.message{
-  width:25%;
-  margin: auto;
 
-}
 .fondAssistance{
-  background-color: #C4D8D5;
+  background-color: #F4F4F4;
 }
+
+fieldset {
+ padding:0 20px 20px 20px;
+ margin-bottom:10px;
+ border:1px solid
+	#8B8D8D;
+ }
+input, textarea, select, option {
+ background-color:
+	white;
+ }
+input, textarea, select {
+ padding:3px;
+ border:1px solid
+	#8B8D8D;
+ border-radius:5px;
+ width:100%;
+ }
+input[type=radio] {
+ background-color:transparent;
+ border:none;
+ width:10px;
+ }
+input[type=submit], input[type=reset] {
+ width:60px;
+ margin-left:5px;
+ cursor:pointer;
+ float:right;
+ }
