--- a/Styles/assistance.css
+++ b/Styles/assistance.css
@@ -64,6 +64,9 @@ input, textarea, select, option {
  background-color:
 	white;
  }
+ textarea {
+   height: 100px;
+ }
 input, textarea, select {
  padding:3px;
  border:1px solid
