--- a/Styles/statistiques.css
+++ b/Styles/statistiques.css
@@ -2,9 +2,10 @@
 	 list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: white;
+    background-color: #DFDFDF;
     overflow: hidden;
     font-family: trebuchet MS, arial, verdana;
+		text-align: center;
 }
 .pieces2 {
     display: inline;
@@ -13,7 +14,7 @@
 
 
 .pieces2 a {
-    color:#964DB8;
+    color: #666;
     display: block;
     color: greys;
     text-align: center;
@@ -21,8 +22,13 @@
     text-decoration: none;
 }
 
-.pieces2 a:hover {
+a:hover {
     background-color: #e7e7e7;
+
+
+}
+a:visited {
+    color: #666;
 
 
 }
