--- a/Styles/salle.css
+++ b/Styles/salle.css
@@ -87,3 +87,12 @@ input[type=submit], input[type=reset] {
  margin-left:5px;
  cursor:pointer;
  }
+
+ .bton {
+   margin-bottom: -4px;
+   height:20px;
+   width:15px;
+   display:inline-block;
+   background-color:transparent;
+   border:none;
+ }
