--- a/Styles/salle.css
+++ b/Styles/salle.css
@@ -66,7 +66,7 @@ input, textarea, select, option {
  background-color:
 	white;
  }
-input, textarea, select {
+.formulaire input, textarea, select {
  padding:3px;
  margin-bottom: 5px;
  border:1px solid
@@ -77,7 +77,7 @@ input, textarea, select {
  select {
  margin-top:10px;
  }
-input[type=radio] {
+.formulaire input[type=radio] {
  background-color:transparent;
  border:none;
  width:10px;
@@ -88,6 +88,9 @@ input[type=submit], input[type=reset] {
  cursor:pointer;
  }
 
+input {
+  display:inline;
+}
  .bton {
    margin-bottom: -4px;
    height:20px;
