--- a/Styles/VueGenerale.css
+++ b/Styles/VueGenerale.css
@@ -9,7 +9,7 @@
 }
 
 .BlockFlex {
-   background-color:  rgba(255, 255, 255, 0.5);;
+   background-color:  rgba(255, 255, 255, 0.5);
      /* For IE8 and earlier */
     width: 400px;
     height: -100px;
