--- a/Styles/flexbox.css
+++ b/Styles/flexbox.css
@@ -104,9 +104,7 @@ li a:hover {
 }
 
 .Block {
-    background-color: #ffffff;
-    opacity: 0.9;
-    filter: alpha(opacity=60); /* For IE8 and earlier */
+       background-color:  rgba(255, 255, 255, 0.5); /* For IE8 and earlier */
     width: 400px;
     height: -100px;
     margin: 10px;
