--- a/Styles/accueiladmin.css
+++ b/Styles/accueiladmin.css
@@ -48,3 +48,12 @@
   font-family: trebuchet,Arial;
   color: grey;
 }
+
+.bton {
+  margin-bottom: -4px;
+  height:20px;
+  width:15px;
+  display:inline;
+  background-color:transparent;
+  border:none;
+}
