--- a/Styles/VueGenerale.css
+++ b/Styles/VueGenerale.css
@@ -16,6 +16,7 @@
     border: none;
     min-height: 50vh;
     border-radius: 10px;
+    padding-right: 20px;
 
 
 }
@@ -34,8 +35,8 @@
     font-size: 25px;
 }
 .ampoule {
-    height :20px ;
-    width :80px  ;
+    height :50px ;
+    width :110px  ;
     max-width: 100%;
     height: auto;
     margin-left: -5px;
