--- a/Styles/VueGenerale.css
+++ b/Styles/VueGenerale.css
@@ -10,13 +10,14 @@
 .BlockFlex {
     margin-top: 5%;
     background-color:  rgba(255, 255, 255, 0.5);
-    width: 20%;
+    width: 17%;
     margin-right: 2%;
     height: -100px;
     border: none;
     min-height: 50vh;
     border-radius: 10px;
     padding-right: 20px;
+    padding-right: 3%;
 
 
 }
@@ -36,7 +37,7 @@
 }
 .ampoule {
     height :50px ;
-    width :110px  ;
+    width :130px  ;
     max-width: 100%;
     height: auto;
     margin-left: -5px;
@@ -44,10 +45,10 @@
 }
 .lumiere {
     font-family: Comic Sans MS,Arial;
-    margin-left: 100px;
-    width:130px;
+    margin-left: 120px;
+    width:120px;
     margin-right: -100px;
-    margin-top: -120px;
+    margin-top: -160px;
     font-size: 25px;
 }
 .cadena {
